<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:id="@+id/make_echo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_vertical"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/manager_makeecho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp" >

            <ImageButton
                android:id="@+id/echo_makeecho"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:src="@drawable/echonow_but_normal" />

            <ImageButton
                android:id="@+id/make_makeecho"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:src="@drawable/makeecho_but_selected" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/manager_add_but"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageButton
                android:id="@+id/add_folder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:src="@drawable/makeecho_add_but" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/manager_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Spinner
                android:id="@+id/list_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:background="@drawable/droplist_button_bg"
                android:dropDownVerticalOffset="1dp"
                android:popupBackground="@android:color/transparent"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/no_echolist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="@string/no_echolist"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/manager_butrecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageButton
                android:id="@+id/manager_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:src="@drawable/makeecho_record_but" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/manager_texttime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/time_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:text="@string/time"
                android:textColor="@color/red_time"
                android:textSize="30sp"
                android:typeface="serif" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/manager_buttoncontrol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <ImageButton
                    android:id="@+id/add_record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/makeecho_addrecord_but" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <ImageButton
                    android:id="@+id/cancle_record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/makeecho_cancel_but" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/manager_edittextfile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" >

            <RelativeLayout
                android:id="@+id/layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:background="@drawable/makeecho_textfield_bg"
                android:gravity="center" >

                <EditText
                    android:id="@+id/text_inputfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:ems="15"
                    android:gravity="left"
                    android:hint="@string/defauft_name_echo"
                    android:maxLength="20"
                    android:paddingBottom="15dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="15dp"
                    android:singleLine="true"
                    android:textColorHint="@android:color/background_light" >
                </EditText>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

</ScrollView> <!-- Note: -->
