<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/manager_echonow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc"
            android:paddingTop="10dp"
            android:src="@drawable/makeecho_but_normal" />

        <ImageButton
            android:id="@+id/echo_echonow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc"
            android:paddingTop="10dp"
            android:src="@drawable/echonow_but_selected" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/manager_rate_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/manager_echonow"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="15dp" >

        <LinearLayout
            android:id="@+id/manager_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/rate_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/rate_1"
                    android:textColor="@color/red_time"
                    android:textSize="35sp"
                    android:typeface="serif" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/rate_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/rate_2"
                    android:textColor="@color/red_time"
                    android:textSize="35sp"
                    android:typeface="serif" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/rate_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/rate_3"
                    android:textColor="@color/red_time"
                    android:textSize="35sp"
                    android:typeface="serif" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/rate_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/rate_4"
                    android:textColor="@color/red_time"
                    android:textSize="35sp"
                    android:typeface="serif" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/rate_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/rate_5"
                    android:textColor="@color/red_time"
                    android:textSize="35sp"
                    android:typeface="serif" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/manager_play_edit_echo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingBottom="10dp" >

        <RelativeLayout
            android:id="@+id/manager_tool"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:paddingLeft="10dp"
                android:src="@drawable/back_but" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:baselineAligned="true"
                android:orientation="horizontal"
                android:paddingLeft="180dp" >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <ImageButton
                        android:id="@+id/edit_done"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/desc"
                        android:src="@drawable/done_but_bg" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <ImageButton
                        android:id="@+id/edit_rename"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/desc"
                        android:src="@drawable/rename_echo_but" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <ImageButton
                        android:id="@+id/edit_delete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/desc"
                        android:src="@drawable/del_echo_but" />
                </RelativeLayout>
            </LinearLayout>

            <ImageButton
                android:id="@+id/edit_echo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:paddingRight="40dp"
                android:src="@drawable/edit_echo_but" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/manager_tool"
            android:baselineAligned="true"
            android:fitsSystemWindows="true"
            android:orientation="horizontal"
            android:paddingTop="15dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageButton
                    android:id="@+id/shuffer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/audio_mediashuffle_but" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageButton
                    android:id="@+id/rate_shuffer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/audio_rateshuffle_but" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageButton
                    android:id="@+id/echo_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/audio_back_but" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageButton
                    android:id="@+id/echo_play_pause"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/audio_play_but" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageButton
                    android:id="@+id/echo_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/audio_next_but" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <com.bkapp.recordedu.view.CustomListView
        android:id="@+id/list_echo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/manager_play_edit_echo"
        android:layout_below="@+id/manager_rate_layout"
        android:layout_centerInParent="true"
        android:background="@android:color/transparent"
        android:divider="@null"
        android:dividerHeight="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >
    </com.bkapp.recordedu.view.CustomListView>

</RelativeLayout>